--- a/lyrics_generator_LSTM.ipynb
+++ b/lyrics_generator_LSTM.ipynb
@@ -18,17 +18,6 @@
      "text": [
       "Using TensorFlow backend.\n"
      ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rhyme_searching'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-1996bb1c8fe5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mrhyme_searching\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'rhyme_searching'"
-     ]
     }
    ],
    "source": [
@@ -53,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,9 +319,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\users\\mcku1\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\mcku1\\AppData\\Local\\Temp\\jieba.cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm_1 (LSTM)                (None, 2, 4)              112       \n",
+      "_________________________________________________________________\n",
+      "lstm_2 (LSTM)                (None, 2, 8)              416       \n",
+      "_________________________________________________________________\n",
+      "lstm_3 (LSTM)                (None, 2, 8)              544       \n",
+      "_________________________________________________________________\n",
+      "lstm_4 (LSTM)                (None, 2, 8)              544       \n",
+      "_________________________________________________________________\n",
+      "lstm_5 (LSTM)                (None, 2, 8)              544       \n",
+      "_________________________________________________________________\n",
+      "lstm_6 (LSTM)                (None, 2, 2)              88        \n",
+      "=================================================================\n",
+      "Total params: 2,248\n",
+      "Trainable params: 2,248\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading model cost 2.309 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "為何我們還是各自幸福遺憾中老去\n",
+      "每個孤單天亮\n",
+      "屋頂天空我們\n",
+      "不能改變固執\n",
+      "是否問過自己\n",
+      "像是一個不斷忘詞歌手\n",
+      "七點一杯咖啡\n",
+      "隨著節奏慢慢散開\n",
+      "可以推倒世界\n",
+      "不能繼續等待\n",
+      "知道我們曾天真的一起\n",
+      "今以不再欺負\n",
+      "跳舞還要別人\n",
+      "如果只能打一通電話\n",
+      "可愛美好一片混亂\n",
+      "等到荒廢青春\n",
+      "每顆星星嗚咽\n",
+      "美夢失去線索\n",
+      "老天自有安排\n",
+      "如果還有明天\n",
+      "經過漫長等候\n",
+      "拖著鼻涕童年\n",
+      "我們曾經那麼精彩\n",
+      "終於自己自己鼓掌\n",
+      "失去風景裡面\n",
+      "未來放在肩上\n",
+      "依然堅強石頭一塊\n",
+      "想要怎樣喧嘩\n",
+      "一個刻滿諾言明天\n",
+      "一顆噗通噗通\n",
+      "WARNING:tensorflow:From c:\\users\\mcku1\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "About to write rap (this could take a moment)...\n",
+      "\n",
+      "\n",
+      "\n",
+      "想要怎樣喧嘩\n",
+      "不能繼續等待\n",
+      "老天自有安排\n",
+      "每個孤單天亮\n",
+      "未來放在肩上\n",
+      "七點一杯咖啡\n",
+      "屋頂天空我們\n",
+      "跳舞還要別人\n",
+      "等到荒廢青春\n",
+      "一顆噗通噗通\n",
+      "是否問過自己\n",
+      "每顆星星嗚咽\n",
+      "如果還有明天\n",
+      "拖著鼻涕童年\n",
+      "失去風景裡面\n",
+      "可以推倒世界\n",
+      "美夢失去線索\n",
+      "經過漫長等候\n",
+      "今以不再欺負\n",
+      "不能改變固執\n",
+      "隨著節奏慢慢散開\n",
+      "我們曾經那麼精彩\n",
+      "依然堅強石頭一塊\n",
+      "可愛美好一片混亂\n",
+      "終於自己自己鼓掌\n",
+      "一個刻滿諾言明天\n",
+      "如果只能打一通電話\n",
+      "知道我們曾天真的一起\n",
+      "像是一個不斷忘詞歌手\n",
+      "為何我們還是各自幸福遺憾中老去\n"
+     ]
+    }
+   ],
    "source": [
     "main(depth, train_mode)"
    ]
